# alice-eeg-ml

./: .gitattributes  Basic Pipeline.ipynb  MANIFEST.in  Norm.ipynb  README.md  Using pipeline on new data.ipynb  pyproject.toml  requirements.txt  setup.cfg
alice_ml/: features.py  metrics.py  models.py  preprocessing.py  upload.py  utils.py  vis.py
alice_ml/data/: eye_blink_example.npy  eye_move_example.npy  pca_components.npy  pca_mean.npy  test_ica.fif
alice_ml/pretrained/: LR_flag_alpha.pmml  LR_flag_eyes.pmml  LR_flag_mu.pmml  XGB_flag_alpha.pmml  XGB_flag_eyes.pmml  XGB_flag_mu.pmml  lr_flag_alpha.joblib  lr_flag_brain.joblib  lr_flag_ch_noise.joblib  lr_flag_eyes.joblib  lr_flag_heart.joblib  lr_flag_mu.joblib  lr_flag_muscles.joblib  scaler.joblib  scaler_eyes.joblib  scaler_mu_alpha.joblib  svc_flag_brain.joblib  svc_flag_eyes.joblib  xgb_flag_brain.joblib  xgb_flag_eyes.joblib
alice_ml/tests/: test_features.py  test_models.py
