[metadata]
name = alice-ml
version = 0.3.2
author = Alexander Ledovsky
description = ALICE - Automated Labeling of Independent Components for EEG
long_desription = file: readme.md
url = https://github.com/ledovsky/alice-eeg-ml

[options]
install_requires =
    mne >=0.23.4
    scikit-learn >= 1.0.1
python_requires = >=3.7
packages = find:
include_package_data = true
