[metadata]
name = alice-ml
version = 0.3.6
authors = Alexander Ledovsky, Gurgen Soghoyan, Nadezhda Alsahanova
description = ALICE - Automated Labeling of Independent Components for EEG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ALICE-EEG/alice-eeg-ml

[options]
install_requires =
    mne >=0.23.4
    scikit-learn >= 1.0.1
python_requires = >=3.7
packages = find:
include_package_data = true
